feat: add configurable regional policies
